--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.115.5
-numpy==2.1.3
-Requests==2.32.3
-setuptools==59.6.0
-torch==2.5.1
+numpy>=1.26.4
+pydantic>=1.10.13
+uvicorn>=0.15.0
+openai-whisper
+python-multipart
+soundfile
+boto3
