--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,10 @@ share/python-wheels/
 MANIFEST
 models/
 venv/
+venv-3.9/
 whisper_serve.egg-info/
 whisper_service.log
+.vscode/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
