--- a/cluster.yaml
+++ b/cluster.yaml
@@ -3,7 +3,7 @@ cluster_name: whisper-serve-cluster
 
 # The maximum number of workers nodes to launch in addition to the head
 # node.
-max_workers: 4
+max_workers: 8
 
 # The autoscaler will scale up the cluster faster with higher upscaling speed.
 # E.g., if the task requires adding more nodes then autoscaler will gradually
@@ -64,8 +64,8 @@ available_node_types:
                 - DeviceName: /dev/sda1
                   Ebs:
                       VolumeSize: 100
-        min_workers: 4
-        max_workers: 1
+        min_workers: 1
+        max_workers: 8
 
     cpu_worker:
         resources:
@@ -122,6 +122,7 @@ setup_commands:
 #    - pip install transformers
     - sudo mkdir -p /home/ubuntu/logs
     - sudo chmod 755 /home/ubuntu/logs
+    - sudo chown -R ubuntu:ubuntu logs
 #    - sudo systemctl enable amazon-efs-mount-watchdog
 #    - sudo systemctl start amazon-efs-mount-watchdog
 
@@ -136,7 +137,9 @@ worker_setup_commands:
 #        pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu121;
 #      fi
     # workers are all GPU - install cuda version
-    - pip install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu121;
+    # pip3 install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu121
+
+    - pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu121;
     - pip install transformers
     - sudo mkdir -p /shared/models 
     - sudo mkdir -p /shared/logs 
@@ -159,7 +162,7 @@ head_setup_commands:
       done
     - sudo systemctl stop unattended-upgrades
     - pip uninstall -y torch torchvision torchaudio
-    - pip install --pre torch --index-url https://download.pytorch.org/whl/cpu
+    - pip install --pre torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
     - pip install transformers
 #    - sudo mkdir -p /shared/models /shared/logs
 #    - echo "fs-08e6f8d79aaa5fd6e.efs.us-west-2.amazonaws.com:/ /shared efs _netdev,tls,iam,verify=0 0 0" | sudo tee -a /etc/fstab
