--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,14 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.6
-aiohttp-cors==0.7.0
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.6.2.post1
-async-timeout==5.0.1
-attrs==24.2.0
-boto3==1.35.65
-botocore==1.35.65
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-colorful==0.5.6
-distlib==0.3.9
-exceptiongroup==1.2.2
-fastapi==0.115.5
-filelock==3.16.1
-frozenlist==1.5.0
-fsspec==2024.10.0
-google-api-core==2.23.0
-google-auth==2.36.0
-googleapis-common-protos==1.66.0
-grpcio==1.68.0
-h11==0.14.0
-httptools==0.6.4
-huggingface-hub==0.26.2
-idna==3.10
-Jinja2==3.1.4
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-linkify-it-py==2.0.3
-llvmlite==0.43.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-memray==1.14.0
-more-itertools==10.5.0
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-networkx==3.2.1
-numba==0.60.0
+ray[serve]==2.43.0
+torch==2.6.0+cu121
+torchvision==0.21.0+cu121
+torchaudio==2.6.0+cu121
+transformers==4.51.3
+openai-whisper==20240930
+fastapi==0.115.12
+python-multipart==0.0.20
+huggingface-hub==0.30.2
+vllm==0.8.4
+aiohttp==3.11.18
+starlette==0.46.2
+matplotlib==3.9.4
 numpy==2.0.2
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-opencensus==0.11.4
-opencensus-context==0.1.3
-packaging==24.2
-pathspec==0.12.1
-platformdirs==4.3.6
-prometheus_client==0.21.0
-propcache==0.2.0
-proto-plus==1.25.0
-protobuf==5.28.3
-py-spy==0.4.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.17
-PyYAML==6.0.2
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.21.0
-rsa==4.9
-s3transfer==0.10.3
-safetensors==0.4.5
-six==1.16.0
-smart-open==7.0.5
-sniffio==1.3.1
-soundfile==0.12.1
-starlette==0.41.3
-sympy==1.13.1
-textual==0.86.3
-tiktoken==0.8.0
-tokenizers==0.20.3
-torch==2.5.1
-tqdm==4.67.0
-transformers==4.46.3
-triton==3.1.0
-typing_extensions==4.12.2
-uc-micro-py==1.0.3
-urllib3==1.26.20
-uvicorn==0.32.0
-uvloop==0.21.0
-virtualenv==20.27.1
-watchfiles==0.24.0
-websockets==14.1
-wrapt==1.16.0
-yamllint==1.35.1
-yarl==1.17.2
